# usage-bar

./: .gitignore  INSTALL.md  Makefile  README.md  config.yml  input_monitor.py  overspeed_monitor.c  pause.py  pyproject.toml  usage-bar-monitor
python-src/: __init__.py  config.py  input_listener.py  main.py  socket_server.py  state_machine.py
src/: common.h  input_monitor.py  main.c  socket.c  socket.h  window.c  window.h
systemd/: usage-bar-gui.service  usage-bar-monitor.service
